fix(src/lib_fastapi/lib_tempo.py): fix tracer in logging
Author:    Lucas Brito <britol599@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   app:
     build:
       context: .
-    volumes:
-      - .:/home/app
+    # volumes:
+    #   - .:/home/app
     ports:
       - 8000:8000
     env_file:
@@ -40,6 +40,7 @@ services:
     ports:
       - 8003:8003
       - 8004:8004
+      - 8008:8008
   
   grafana:
     build:
