feat(src/lib_fastapi/lib_log.py): add exporter to opentelemetry collector

--- a/.env.dev
+++ b/.env.dev
@@ -1,10 +1,10 @@
 PUSH_GATEWAY_PORT=8001
-PUSH_GATEWAY_HOST="pushgateway"
+PUSH_GATEWAY_HOST=pushgateway
 
-TEMPO_PORT=8008
-TEMPO_HOST="tempo"
+TEMPO_PORT=8000
+TEMPO_HOST=tempo
 
 APP_PORT=8000
-APP_HOST="0.0.0.0"
-APP_NAME="app"
-APP_VERSION="v0.0.1"
+APP_HOST=0.0.0.0
+APP_NAME=app
+APP_VERSION=v0.0.1
