feat(src/lib_fastapi/lib_log.py): adicionando handlers (FileHandler/ExporterHandler/ConsoleHandler)

--- a/.env.dev
+++ b/.env.dev
@@ -8,3 +8,6 @@ APP_PORT=8000
 APP_HOST=0.0.0.0
 APP_NAME=app
 APP_VERSION=v0.0.1
+
+SERVICE_NAME=app_teste_2024
+LOKI_URL=http://loki:8006/api/prom/push
