--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,31 @@
 version: "3.4"
 
 services:
-  app:
-    build:
-      context: .
-    # volumes:
-    #   - .:/home/app
-    ports:
-      - 8000:8000
-    env_file:
-      - .env.dev
-    logging:
-      driver: fluentd
-      options:
-        fluentd-address: localhost:24224
-    depends_on:
-      - fluentbit
-      - prometheus
-      - tempo
-      - pushgateway
+  # app:
+  #   build:
+  #     context: .
+  #   # volumes:
+  #   #   - .:/home/app
+  #   ports:
+  #     - 8000:8000
+  #   env_file:
+  #     - .env.dev
+  #   logging:
+  #     driver: fluentd
+  #     options:
+  #       fluentd-address: localhost:24224
+  #   depends_on:
+  #     - fluentbit
+  #     - prometheus
+  #     - tempo
+  #     - pushgateway
 
   pushgateway:
     build:
       context: templates/pushgateway
     ports:
       - 8001:8001
+    restart: always
   
   prometheus:
     build:
@@ -33,36 +34,64 @@ services:
       - ./templates/prometheus:/etc/prometheus
     ports:
       - 8002:8002
+    restart: always
 
   tempo:
+    container_name: tempo
     build:
       context: templates/tempo
     ports:
       - 8003:8003
       - 8004:8004
       - 8008:8008
+    restart: always
+    networks:
+      - observability-network
   
   grafana:
+    container_name: grafana
     build:
       context: templates/grafana
     ports:
       - 8005:3000
+    restart: always
+    networks:
+      - observability-network
   
   loki:
+    container_name: loki
     build:
       context: templates/loki
+    cpus: 0.1
+    mem_limit: 100m
+    env_file:
+      - .env.dev
     ports:
       - 8006:8006
+    restart: always
+    networks:
+      - observability-network
   
   fluentbit:
+    container_name: fluentbit
     build:
       context: templates/fluentbit
+    cpus: 0.1
+    mem_limit: 100m
+    env_file:
+      - .env.dev
     ports:
       - 24224:24224
+    restart: always
+    networks:
+      - observability-network
     depends_on:
       - loki
   
   otel-collector:
+    container_name: otel-collector
+    cpus: 0.1
+    mem_limit: 100m
     build:
       context: templates/otelCollector
     ports:
@@ -73,11 +102,10 @@ services:
       - 4317:4317 # OTLP gRPC receiver
       - 4318:4318 # OTLP http receiver
       - 55679:55679 # zpages extension
-
-  portainer:
-    image: portainer/portainer-ce
-    ports:
-      - "9000:9000"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
     restart: always
+    networks:
+      - observability-network
+
+networks:
+  observability-network:
+    external: true
