--- a/templates/fluentbit/fluent-bit.conf
+++ b/templates/fluentbit/fluent-bit.conf
@@ -7,7 +7,7 @@
 
     Name grafana-loki
     Match *
-    Url http://loki:8006/api/prom/push
-    Labels {app="primeiro-teste"}
+    Url ${LOKI_URL}
+    Labels {app="${SERVICE_NAME}"}
     Label_Keys $container_name
     Line_Format key_value
