--- a/templates/otelCollector/config.yaml
+++ b/templates/otelCollector/config.yaml
@@ -7,13 +7,32 @@ exporters:
   # NOTE: Prior to v0.86.0 use `logging` instead of `debug`.
   debug:
     verbosity: detailed
+
+  otlphttp:
+    endpoint: "http://tempo:8008"
+
+  loki:
+    endpoint: http://loki:8006/loki/api/v1/push
+
 processors:
   batch:
+
+  attributes:
+    actions:
+      - action: insert
+        key: loki.attribute.labels
+        value: service_name,severityText,traceID,spanID
+
+  resource:
+    attributes:
+      - action: insert
+        key: loki.resource.labels
+        value: service.name,severityText,traceID,spanID
 service:
   pipelines:
     traces:
       receivers: [otlp]
-      exporters: [debug]
+      exporters: [otlphttp]
       processors: [batch]
     metrics:
       receivers: [otlp]
@@ -21,5 +40,5 @@ service:
       processors: [batch]
     logs:
       receivers: [otlp]
-      exporters: [debug]
+      exporters: [loki, debug]
       processors: [batch]
