refactor(src/lib_fastapi/lib_instrumentation): adicionando condicao para exporter GRP/HTTP

--- a/.env.dev
+++ b/.env.dev
@@ -11,3 +11,5 @@ APP_VERSION=v0.0.1
 
 SERVICE_NAME=app_teste_2024
 LOKI_URL=http://loki:8006/api/prom/push
+LOG_FILE=templates/fluentbit/.logs/app.log
+# LOG_FILE=/workspaces/fastapi-lib-observability/templates/fluentbit/.logs/app.log
