--- a/templates/fluentbit/fluent-bit.conf
+++ b/templates/fluentbit/fluent-bit.conf
@@ -3,6 +3,11 @@
     Listen 0.0.0.0
     Port 24224
 
+[INPUT]
+    Name        tail
+    Path        /fluent-bit/etc/logs/app.log
+    Tag         fluent_logs_arquivo
+
 [OUTPUT]
 
     Name grafana-loki
@@ -11,3 +16,9 @@
     Labels {app="${SERVICE_NAME}"}
     Label_Keys $container_name
     Line_Format key_value
+
+# [OUTPUT]
+
+#     Name        stdout
+#     Match       *
+#     Format      json
