--- a/templates/loki/local-config.yaml
+++ b/templates/loki/local-config.yaml
@@ -1,7 +1,8 @@
 auth_enabled: false
 
 server:
-  http_listen_port: 8006
+  http_listen_port: 8006    #default = 3100
+  grpc_listen_port: 8009    #default = 9095
   
 common:
   path_prefix: /loki
@@ -28,15 +29,3 @@ limits_config:
   split_queries_by_interval: '24h'
   max_query_parallelism: 32
 
-# By default, Loki will send anonymous, but uniquely-identifiable usage and configuration
-# analytics to Grafana Labs. These statistics are sent to https://stats.grafana.org/
-#
-# Statistics help us better understand how Loki is used, and they show us performance
-# levels for most users. This helps us prioritize features and documentation.
-# For more information on what's sent, look at
-# https://github.com/grafana/loki/blob/main/pkg/usagestats/stats.go
-# Refer to the buildReport method to see what goes into a report.
-#
-# If you would like to disable reporting, uncomment the following lines:
-#analytics:
-#  reporting_enabled: false
