--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,24 @@
 version: "3.4"
 
 services:
-  # app:
-  #   build:
-  #     context: .
-  #   # volumes:
-  #   #   - .:/home/app
-  #   ports:
-  #     - 8000:8000
-  #   env_file:
-  #     - .env.dev
-  #   logging:
-  #     driver: fluentd
-  #     options:
-  #       fluentd-address: localhost:24224
-  #   depends_on:
-  #     - fluentbit
-  #     - prometheus
-  #     - tempo
-  #     - pushgateway
+  app:
+    container_name: app-docker
+    build:
+      context: .
+    volumes:
+      - .:/app
+    ports:
+      - 8000:8000
+    env_file:
+      - .env.dev
+    # logging:
+    #   driver: fluentd
+    #   options:
+    #     fluentd-address: localhost:24224
+    depends_on:
+      - otel-collector
+    networks:
+      - observability-network
 
   pushgateway:
     build:
@@ -68,6 +68,7 @@ services:
       - .env.dev
     ports:
       - 8006:8006
+      - 8009:8009
     restart: always
     networks:
       - observability-network
@@ -83,6 +84,8 @@ services:
     ports:
       - 24224:24224
     restart: always
+    volumes:
+      - ./templates/fluentbit/.logs:/logs/
     networks:
       - observability-network
     depends_on:
