refactor(src/lib_fastapi/lib_fastapi.py): adicionando setters para exporter metricas/traces

--- a/.env.dev
+++ b/.env.dev
@@ -1,15 +1,27 @@
-PUSH_GATEWAY_PORT=8001
-PUSH_GATEWAY_HOST=pushgateway
+#PUSHGATEWAY HTTP
+METRICS_EXPORTER_URL=http://pushgateway:8001          
 
-TEMPO_PORT=8000
-TEMPO_HOST=tempo
+#OPENTELEMETRY COLLECTOR GRPC
+TRACES_EXPORTER_URL=http://otel-collector:4317
+
+#OPENTELEMETRY COLLECTOR GRPC
+LOGS_EXPORTER_URL=http://otel-collector:4317          
+
+#TEMPO GRPC
+# TRACES_EXPORTER_URL=http://tempo:8004/v1/traces
+
+#TEMPO HTTP
+# TRACES_EXPORTER_URL=http://tempo:8008/v1/traces       
 
 APP_PORT=8000
 APP_HOST=0.0.0.0
-APP_NAME=app
+APP_NAME=app_teste_2024
 APP_VERSION=v0.0.1
 
-SERVICE_NAME=app_teste_2024
 LOKI_URL=http://loki:8006/api/prom/push
-LOG_FILE=templates/fluentbit/.logs/app.log
-# LOG_FILE=/workspaces/fastapi-lib-observability/templates/fluentbit/.logs/app.log
+
+#USE IN docker-compose build/up
+# LOG_FILE=templates/fluentbit/.logs/app.log
+
+#USE IN .devcontainer
+LOG_FILE=/workspaces/fastapi-lib-observability/templates/fluentbit/.logs/app.log 
