--- a/templates/fluentbit/fluent-bit.conf
+++ b/templates/fluentbit/fluent-bit.conf
@@ -5,7 +5,7 @@
 
 [INPUT]
     Name        tail
-    Path        /fluent-bit/etc/logs/app.log
+    Path        /logs/app.log
     Tag         fluent_logs_arquivo
 
 [OUTPUT]
@@ -13,12 +13,12 @@
     Name grafana-loki
     Match *
     Url ${LOKI_URL}
-    Labels {app="${SERVICE_NAME}"}
+    Labels {app="${APP_NAME}"}
     Label_Keys $container_name
     Line_Format key_value
 
-# [OUTPUT]
+[OUTPUT]
 
-#     Name        stdout
-#     Match       *
-#     Format      json
+    Name        stdout
+    Match       *
+    Format      json
