feat(src/lib_fastapi/lib_metrics.py): add support to metrics opentelemtry

--- a/.env.dev
+++ b/.env.dev
@@ -1,11 +1,14 @@
 #PUSHGATEWAY HTTP
-METRICS_EXPORTER_URL=http://pushgateway:8001          
+# METRICS_EXPORTER_URL=http://pushgateway:8001
+
+#OPENTELEMETRY COLLECTOR GRPC
+METRICS_EXPORTER_URL=http://otel-collector:4317
 
 #OPENTELEMETRY COLLECTOR GRPC
 TRACES_EXPORTER_URL=http://otel-collector:4317
 
 #OPENTELEMETRY COLLECTOR GRPC
-LOGS_EXPORTER_URL=http://otel-collector:4317          
+LOGS_EXPORTER_URL=http://otel-collector:4317
 
 #TEMPO GRPC
 # TRACES_EXPORTER_URL=http://tempo:8004/v1/traces
