--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,46 @@
 version: "3.4"
 
 services:
-  app:
-    container_name: app-docker
-    build:
-      context: .
-    volumes:
-      - .:/app
-    ports:
-      - 8000:8000
-    env_file:
-      - .env.dev
-    # logging:
-    #   driver: fluentd
-    #   options:
-    #     fluentd-address: localhost:24224
-    depends_on:
-      - otel-collector
-    networks:
-      - observability-network
+  # app:
+  #   container_name: app-docker
+  #   build:
+  #     context: .
+  #   volumes:
+  #     - .:/app
+  #   ports:
+  #     - 8000:8000
+  #   env_file:
+  #     - .env.dev
+  #   # logging:
+  #   #   driver: fluentd
+  #   #   options:
+  #   #     fluentd-address: localhost:24224
+  #   depends_on:
+  #     - otel-collector
+  #   networks:
+  #     - observability-network
 
-  pushgateway:
-    container_name: pushgateway
-    build:
-      context: templates/pushgateway
-    ports:
-      - 8001:8001
-    restart: always
-    networks:
-      - observability-network
+  # pushgateway:
+  #   container_name: pushgateway
+  #   build:
+  #     context: templates/pushgateway
+  #   ports:
+  #     - 8001:8001
+  #   restart: always
+  #   networks:
+  #     - observability-network
   
-  prometheus:
-    container_name: prometheus
-    build:
-      context: templates/prometheus
-    volumes:
-      - ./templates/prometheus:/etc/prometheus
-    ports:
-      - 8002:8002
-    restart: always
-    networks:
-      - observability-network
+  # prometheus:
+  #   container_name: prometheus
+  #   build:
+  #     context: templates/prometheus
+  #   volumes:
+  #     - ./templates/prometheus:/etc/prometheus
+  #   ports:
+  #     - 8002:8002
+  #   restart: always
+  #   networks:
+  #     - observability-network
 
   tempo:
     container_name: tempo
@@ -79,23 +79,23 @@ services:
     networks:
       - observability-network
   
-  fluentbit:
-    container_name: fluentbit
-    build:
-      context: templates/fluentbit
-    cpus: 0.1
-    mem_limit: 100m
-    env_file:
-      - .env.dev
-    ports:
-      - 24224:24224
-    restart: always
-    volumes:
-      - ./templates/fluentbit/.logs:/logs/
-    networks:
-      - observability-network
-    depends_on:
-      - loki
+  # fluentbit:
+  #   container_name: fluentbit
+  #   build:
+  #     context: templates/fluentbit
+  #   cpus: 0.1
+  #   mem_limit: 100m
+  #   env_file:
+  #     - .env.dev
+  #   ports:
+  #     - 24224:24224
+  #   restart: always
+  #   volumes:
+  #     - ./templates/fluentbit/.logs:/logs/
+  #   networks:
+  #     - observability-network
+  #   depends_on:
+  #     - loki
   
   otel-collector:
     container_name: otel-collector
